--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ section {
 #cover {
     position: relative;
     /* background-image: url('https://github.com/Zarriq22/assset-azra-wedding/blob/main/asset%20kita/images/prewed-intro.jpg?raw=true'); */
-    background-image: url('images/prewed/1000149819.jpg');
+    background-image: url('images/prewed/cover.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -592,7 +592,7 @@ section {
 .cp-address {
     display: flex;
     flex-direction: column;
-    padding: 10px 0px;
+    padding: 10px 8px;
     background-color: var(--opacity-50);
     border-radius: 20px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
@@ -1242,6 +1242,10 @@ section {
 
     .section-title {
         font-size: 42px;
+    }
+
+    .title-name {
+        font-size: 36px !important;
     }
 
     .date-box h2 {
