--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ section {
 #cover {
     position: relative;
     /* background-image: url('https://github.com/Zarriq22/assset-azra-wedding/blob/main/asset%20kita/images/prewed-intro.jpg?raw=true'); */
-    background-image: url('images/prewed/cover.jpg');
+    background-image: url('images/prewed/1000149751.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
